plugins {
    id 'java-library'
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).configureEach {
    def javacExportPackages = [
            'jdk.compiler/com.sun.tools.javac.api',
            'jdk.compiler/com.sun.tools.javac.code',
            'jdk.compiler/com.sun.tools.javac.tree',
            'jdk.compiler/com.sun.tools.javac.util'
    ]
    def javacExports = javacExportPackages.collect { "--add-exports=${it}=ALL-UNNAMED".toString() }

    options.compilerArgs.addAll(javacExports)
    options.fork = true
    options.forkOptions.jvmArgs.addAll(javacExports)
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}
